--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bulma": "^0.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -40,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "node-sass": "4.14.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
